2001-12-31  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: move config.h.in to maintainerclean - it is included
	in a tarball so a distclean shouldn't remove it
 
2001-12-31  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* gui/ui/oprof_start.base.ui:
	* doc/oprofile.sgml:
	* doc/oprofile.1.in: small updates
 
	* oprofile.c: more detail on locking requirements for wake_up
 
2001-12-31  Michel Dagenais  <michel.dagenais@polymtl.ca>

	* gui/oprof_start.cpp:
	* gui/oprof_start.h: show total samples so far
 
2001-12-29  Philippe Elie  <ph_e@club-internet.fr>

	* dae/oprofiled.c:
	* dae/op_start: --separate-samples is working

	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/ui/oprof_start.base.ui: handle separating for
	  shared libs, off by default.

	* doc/oprofile.sgml:
	* doc/oprofile.1.in: document --show-shared-libs

	* pp/opf_filter.h:
	* pp/opf_container.cpp: new class samples_files_t
	  to easier access to subset of symbols/samples or
	  source filename from multiple image

	* pp/Makefile.in:
	* pp/op_time.cpp:
	* pp/opf_filter.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h:
	* pp/oprofpp_util.cpp: implement --show-shared-libs except
	  for opf_filter

	* util/file_manip.h:
	* util/file_manip.cpp: new function to manipulate sample
	  file name and list of sample file name.

2001-12-27  Philippe Elie  <ph_e@club-internet.fr>

	* dae/op_stop: always do an op_dump before stopping
	* gui/oprof_start.cpp: op_dump before op_stop
	  no longer required

2001-12-26  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/oprofpp.h:
	* pp/opf_filter.cpp:	
	* pp/oprofpp_util.cpp:
	* pp/oprofpp.cpp:
	* pp/op_time.c: remove some use of global var
	  samplefile and imagefile

	* pp/oprofpp.cpp: do_dump_gprof() free memory
	  too soon. (was bugged from 2001-12-05)

	* doc/oprofile.sgml: remove mention about oprof-thread
	  
2001-12-23  Philippe Elie  <ph_e@club-internet.fr>
