@@ -1,3 +1,4 @@
+.deps
 Makefile
 oprofiled
 op_help
