@@ -1,2 +1,3 @@
+.deps
 Makefile
 op_help
