@@ -1,3 +1,4 @@
+.deps
 Makefile
 a.diff
 oprofile.s
