@@ -1,4 +1,6 @@
+.deps
 Makefile
+op_time
 oprofpp
 oprof_convert
 opf_filter
